# Mollow

./: Cargo.toml  README-CN.md  README.md
.github/workflows/: ci.yml  release.yml  static.yml
crates/mollow-archive/: Cargo.toml
crates/mollow-archive/src/: lib.rs
crates/mollow-bench/: Cargo.toml
crates/mollow-bench/fixtures/: minimal-baseline.h264
crates/mollow-bench/src/: lib.rs  statistics.rs  workloads.rs
crates/mollow-bench/src/gpu/: mod.rs  wgpu_backend.rs
crates/mollow-bench/src/media/: linux.rs  macos.rs  mod.rs  windows.rs
crates/mollow-catalog/: Cargo.toml
crates/mollow-catalog/src/: catalog.rs  lib.rs  normalize.rs
crates/mollow-cli/: Cargo.toml
crates/mollow-cli/src/: app.rs  main.rs
crates/mollow-cli/tests/: bench.rs  inspect.rs  watch.rs  workflow.rs
crates/mollow-compare/: Cargo.toml
crates/mollow-compare/src/: lib.rs
crates/mollow-core/: Cargo.toml
crates/mollow-core/src/: lib.rs  model.rs
crates/mollow-platform/: Cargo.toml
crates/mollow-platform/src/: lib.rs  linux_dmi.rs  linux_gpu.rs  linux_media.rs  linux_parse.rs  native.rs  runtimes.rs
crates/mollow-platform/src/native/: linux.rs  macos.rs  portable.rs  windows.rs  windows_gpu.rs  windows_media.rs  windows_thermal.rs
crates/mollow-platform/src/native/windows/: gpu.rs  media.rs  mod.rs  thermal.rs
crates/mollow-report/: Cargo.toml
crates/mollow-report/src/: lib.rs  localization.rs  test_fixtures.rs
data/hardware/: catalog.json
docs/: architecture.md  benchmarks.md  comparison.md  hardware-enrichment.md  homebrew.md  packaging.md  release-verification.md
docs/adr/: 0001-versioned-snapshots-and-capability-states.md  0002-hardware-enrichment-decisions.md
packaging/: install-ubuntu.sh  install.ps1  install.sh  push-homebrew-tap-ci.sh  push-homebrew-tap.sh  render-homebrew-formula.sh  update-homebrew-sha256.sh  update-package-checksums.sh
packaging/homebrew/: mollow.rb
packaging/scoop/: mollow.json
packaging/winget/: ingeniousfrog.Mollow.yaml
schemas/: benchmark-run-v1.schema.json  benchmark-run-v2.schema.json  benchmark-run-v3.schema.json  benchmark-run-v4.schema.json  comparison-report-v1.schema.json  comparison-report-v2.schema.json  machine-snapshot-v1.schema.json  machine-snapshot-v2.schema.json  machine-snapshot-v3.schema.json  machine-snapshot-v4.schema.json
