[workspace]
members = [
    "crates/mollow-cli",
    "crates/mollow-core",
    "crates/mollow-platform",
    "crates/mollow-report",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ingeniousfrog/Mollow"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
