[workspace]
members = [
    "crates/mollow-archive",
    "crates/mollow-bench",
    "crates/mollow-cli",
    "crates/mollow-compare",
    "crates/mollow-core",
    "crates/mollow-platform",
    "crates/mollow-report",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ingeniousfrog/Mollow"
rust-version = "1.85"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
