[package]
name = "mollow-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
mollow-core = { path = "../mollow-core" }
pollster = "0.4"
wgpu = "24"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[lints]
workspace = true

