[package]
name = "mollow-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mollow-core = { path = "../mollow-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
