[package]
name = "mollow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mollow"
path = "src/main.rs"

[dependencies]
clap.workspace = true
mollow-bench = { path = "../mollow-bench" }
mollow-compare = { path = "../mollow-compare" }
mollow-core = { path = "../mollow-core" }
mollow-platform = { path = "../mollow-platform" }
mollow-report = { path = "../mollow-report" }
mollow-archive = { path = "../mollow-archive" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
