[package]
name = "mollow-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
mollow-core = { path = "../mollow-core" }
mollow-compare = { path = "../mollow-compare" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema = "0.29"

[lints]
workspace = true
